[package]
name = "sre"
version = "0.1.0"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Symmetric revocable encryption implementation"
documentation = "https://github.com/myl7/sre#readme"
homepage = "https://github.com/myl7/sre"
repository = "https://github.com/myl7/sre.git"
license = "Apache-2.0"
keywords = [
  "crypto",
  "symmetric-revocable-encryption",
  "puncturable-prf",
  "bloom-filter",
  "symmetric-searchable-encryption",
]
categories = ["cryptography"]

[dependencies]
crypto_secretbox = "0.1.1"
rand = "0.8.5"
sha2 = "0.10.7"
hmac = "0.12.1"
bitvec = "1.0.1"
siphasher = "0.3.10"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
