[package]
name = "sre"
version = "0.1.2"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Symmetric revocable encryption implementation"
documentation = "https://docs.rs/sre"
homepage = "https://github.com/myl7/sre"
repository = "https://github.com/myl7/sre.git"
license = "Apache-2.0"
keywords = [
  "crypto",
  "sym-revocable-enc",
  "puncturable-prf",
  "bloom-filter",
  "sse",
]
categories = ["cryptography"]

[dependencies]
crypto_secretbox = "0.1.1"
rand = "0.8.5"
sha2 = "0.10.7"
hmac = "0.12.1"
bitvec = "1.0.1"
siphasher = "0.3.10"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
