[package]
name = "sre"
version = "0.2.0"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Symmetric revocable encryption implementation"
documentation = "https://docs.rs/sre"
homepage = "https://github.com/myl7/sre"
repository = "https://github.com/myl7/sre.git"
license = "Apache-2.0"
keywords = [
  "crypto",
  "sym-revocable-enc",
  "puncturable-prf",
  "bloom-filter",
  "sse",
]
categories = ["cryptography"]

[features]
bloom-h = ["siphasher"]
ggm-key-derive = ["hmac", "sha2"]
symm-enc = ["crypto_secretbox"]

[dependencies]
rand = "0.8.5"
bitvec = "1.0.1"
siphasher = { version = "0.3.10", optional = true }
hmac = { version = "0.12.1", optional = true }
sha2 = { version = "0.10.7", optional = true }
crypto_secretbox = { version = "0.1.1", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
